--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ header {
 
 <a href="1manga-home .html"><img src="img./manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="2syosetu-home.html"><img src="img.img../syosetu.jpg"width=: auto; height=100% alt="小説"></a>
-<a href="3irasuto-home.html"><img src="img./https://github.com/gesunayakitori/yakitori/blob/main/img/irasuto.jpg?raw=true"width=: auto; height=100% alt="イラスト"></a>
+<a href="3irasuto-home.html"><img src="https://github.com/gesunayakitori/yakitori/blob/main/img/irasuto.jpg?raw=true"width=: auto; height=100% alt="イラスト"></a>
 <a href="4syouhin-home.html"><img src="img./syouhin.jpg"width=: auto; height=100% alt="商品"></a>
 <a href="5osusume-home.html"><img src="img./osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
 <a href="6profile-home.html"><img src="img./profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
