--- a/3irasuto-home.html
+++ b/3irasuto-home.html
@@ -140,10 +140,10 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">イラスト</font></p></b>
-<img src="3irasuto./irasuto (1).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto./irasuto (2).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto./irasuto (3).jpg"width=: auto; height=93% alt="イラスト">
-<img src="3irasuto./irasuto (4).jpg"width=: auto; height=93% alt="イラスト">
+<img src="3irasuto/irasuto (1).jpg"width=: auto; height=93% alt="イラスト">
+<img src="3irasuto/irasuto (2).jpg"width=: auto; height=93% alt="イラスト">
+<img src="3irasuto/irasuto (3).jpg"width=: auto; height=93% alt="イラスト">
+<img src="3irasuto/irasuto (4).jpg"width=: auto; height=93% alt="イラスト">
 
 
 <br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
