--- a/3irasuto-home.html
+++ b/3irasuto-home.html
@@ -140,7 +140,7 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 <b><p><font size="5">イラスト</font></p></b>
-<img src="img/irasuto (1).jpg"width=: auto; height=93% alt="イラスト">
+<img src="3irasuto/irasuto (1).jpg"width=: auto; height=93% alt="イラスト">
 <img src="3irasuto/irasuto (2).jpg"width=: auto; height=93% alt="イラスト">
 <img src="3irasuto/irasuto (3).jpg"width=: auto; height=93% alt="イラスト">
 <img src="3irasuto/irasuto (4).jpg"width=: auto; height=93% alt="イラスト">
