--- a/home.html
+++ b/home.html
@@ -143,9 +143,9 @@ header {
 <a href="https://gyhentai.com/1manga-home"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="https://gyhentai.com/2syosetu-home"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
 <a href="https://gyhentai.com/3irasuto-home"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
-<a href="https://gyhentai.com/4syouhin-home"><img src="img./syouhin.jpg"width=: auto; height=100% alt="商品"></a>
-<a href="https://gyhentai.com/5osusume-home"><img src="img./osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
-<a href="https://gyhentai.com/6profile-home"><img src="img./profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
+<a href="https://gyhentai.com/4syouhin-home"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
+<a href="https://gyhentai.com/5osusume-home"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
+<a href="https://gyhentai.com/6profile-home"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
 
 
