--- a/fukusyu-no-oltudoaizu-home-s.html
+++ b/fukusyu-no-oltudoaizu-home-s.html
@@ -150,7 +150,7 @@ header {
 <br />
 しかし、とある事件をきっかけに2人は全てに対しての復讐を始める。<br />
 
-<br><a href="2syosetu./1fukusyu-no-oltudoaizu-s./fukusyu-no-oltudoaizu-s1.html"><b><p><font size="5">1話 隔離された平和な村 ヒロイック村(♡1)</font></p></b></a>
+<br><a href="2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html"><b><p><font size="5">1話 隔離された平和な村 ヒロイック村(♡1)</font></p></b></a>
 
 
 
