--- a/home.html
+++ b/home.html
@@ -140,13 +140,14 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href="https://gyhentai.com/1manga-home"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>（https://gyhentai.com/1manga-home）
+<a href="https://gyhentai.com/1manga-home"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="https://gyhentai.com/2syosetu-home"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
 <a href="https://gyhentai.com/3irasuto-home"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
 <a href="https://gyhentai.com/4syouhin-home"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
 <a href="https://gyhentai.com/5osusume-home"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
 <a href="https://gyhentai.com/6profile-home"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
-
+		
+[[https://github.com/main/"img/manga.jpg"width=: auto; height=100%|alt=octocat]]
 
 <br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
 <br><ins class="dmm-widget-placement" data-id="51512ab125da9923ad422ff9a7003391" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="51512ab125da9923ad422ff9a7003391"></script>
