--- a/home.html
+++ b/home.html
@@ -140,7 +140,7 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href="https://gyhentai.com/1manga-home"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1manga-home .html"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="https://gyhentai.com/2syosetu-home"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
 <a href="https://gyhentai.com/3irasuto-home"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
 <a href="https://gyhentai.com/4syouhin-home"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
