--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href="1manga-home .html"><img src="img./manga.jpg"width=: auto; height=100% alt="漫画"></a>
-<a href="2syosetu-home.html"><img src="img./syosetu.jpg"width=: auto; height=100% alt="小説"></a>
-<a href="3irasuto-home.html"><img src="img./irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
-<a href="4syouhin-home.html"><img src="img./syouhin.jpg"width=: auto; height=100% alt="商品"></a>
-<a href="5osusume-home.html"><img src="img./osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
-<a href="6profile-home.html"><img src="img./profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
+<a href="1manga-home .html"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="2syosetu-home.html"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
+<a href="3irasuto-home.html"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
+<a href="4syouhin-home.html"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
+<a href="5osusume-home.html"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
+<a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
 
 
@@ -315,22 +315,6 @@ background-color: #00FF00; /*緑色*/
 }
 }
 
-
-
-
-img {
-  pointer-events: none;
-}
-
-
-img {
--webkit-touch-callout:none;
-  -webkit-user-select:none;
-  -moz-touch-callout:none;
-  -moz-user-select:none;
-  touch-callout:none;
-  user-select:none;
-}
 
 
 
