--- a/fukusyu-no-oltudoaizu-home-s.html
+++ b/fukusyu-no-oltudoaizu-home-s.html
@@ -97,7 +97,7 @@ ul.navi-top li:hover ul {
 </head>
 <body>
   <header>
-    <li><a href="LINK"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
+    <li><a href="home.html"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
 
     <nav class="nav">
 
