--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
@@ -7,46 +7,30 @@
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
-   <li><a href="LINK">home</a></li>
-   <li><a href="LINK">漫画</a></li>
-   <li><a href="LINK">小説</a></li>
-   <li><a href="LINK">イラスト</a></li>
-   <li><a href="LINK">商品</a></li>
-   <li><a href="LINK">おすすめ</a></li>   
-　　<li><a href="LINK">プロフィール</a></li>  
+ <li><a href="home.html">home</a></li>
+   <li><a href="1manga-home .html">漫画</a></li>
+   <li><a href="2syosetu-home.html">小説</a></li>
+   <li><a href="3irasuto-home.html">イラスト</a></li>
+   <li><a href="4syouhin-home.html">商品</a></li>
+   <li><a href="5osusume-home.html">おすすめ</a></li>   
+　　<li><a href="6profile-home.html">プロフィール</a></li>  
     <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul>
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
-   <li><a href="LINK">home</a></li>
-   <li><a href="LINK">漫画</a>
-      <ul>
-         <li><a href="LINK">復讐の異色眼兄妹</a></li>
-      </ul>
+   <li><a href="home.html">home</a></li>
+   <li><a href="1manga-home .html">漫画</a>
    </li>
-   <li><a href="LINK">小説</a>
-      <ul>
-         <li><a href="LINK">復讐の異色眼兄妹</a></li>
-         <li><a href="LINK">転生先の世界では</a></li>
-      </ul>
+   <li><a href="2syosetu-home.html">小説</a>
    </li>
-
-   <li><a href="LINK">イラスト</a></li>
- <li><a href="LINK">商品</a>
-      <ul>
-         <li><a href="LINK">FANZA</a></li>
-         <li><a href="LINK">DLsite</a></li>
-      </ul>
+   <li><a href="3irasuto-home.html">イラスト</a></li>
+ <li><a href="4syouhin-home.html">商品</a>
    </li>
-   <li><a href="LINK">おすすめ</a>
-      <ul>
-         <li><a href="LINK">FANZA</a></li>
-         <li><a href="LINK">DLsite</a></li>
-      </ul>
+   <li><a href="5osusume-home.html">おすすめ</a>
    </li>
-   <li><a href="LINK">プロフィール</a></li> 
+   <li><a href="6profile-home.html">プロフィール</a></li> 
    <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul> 
@@ -112,7 +96,7 @@ ul.navi-top li:hover ul {
 </head>
 <body>
   <header>
-    <li><a href="LINK"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
+    <li><a href="home.html"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
 
     <nav class="nav">
 
