--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ header {
 
 </style>
 
-<form action="#" method="post">
+<form action="gyhentai.com" method="post">
   <input type="search" name="search" placeholder="キーワードを入力">
   <input type="submit" name="submit" value="検索">
 </form>
