--- a/home.html
+++ b/home.html
@@ -126,7 +126,17 @@ header {
   <input type="search" name="search" placeholder="キーワードを入力">
   <input type="submit" name="submit" value="検索">
 </form>
+	
+<form method=”get” action=http://www.google.co.jp/search target=”_blank”>
+<input type=”text” name="query" size="30" maxlength="255" value="">
+<input type=”submit” name="btn" value="検索">
+<input type="hidden" name="hl" value="ja">
+<input type="hidden" name="sitesearch" value="gyhentai.com">
+</form>
 
+ 
+	
+	
 <style>
 
 </style>
