--- a/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
+++ b/2syosetu/1fukusyu-no-oltudoaizu-s/fukusyu-no-oltudoaizu-s1.html
@@ -7,30 +7,30 @@
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
- <li><a href="home.html">home</a></li>
-   <li><a href="1manga-home .html">漫画</a></li>
-   <li><a href="2syosetu-home.html">小説</a></li>
-   <li><a href="3irasuto-home.html">イラスト</a></li>
-   <li><a href="4syouhin-home.html">商品</a></li>
-   <li><a href="5osusume-home.html">おすすめ</a></li>   
-　　<li><a href="6profile-home.html">プロフィール</a></li>  
+ <li><a href="https://gyhentai.com/home">home</a></li>
+   <li><a href="https://gyhentai.com/1manga-home">漫画</a></li>
+   <li><a href="https://gyhentai.com/2syosetu-home">小説</a></li>
+   <li><a href="https://gyhentai.com/3irasuto-home">イラスト</a></li>
+   <li><a href="https://gyhentai.com/4syouhin-home">商品</a></li>
+   <li><a href="https://gyhentai.com/5osusume-home">おすすめ</a></li>   
+　　<li><a href="https://gyhentai.com/6profile-home">プロフィール</a></li>  
     <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul>
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
-   <li><a href="home.html">home</a></li>
-   <li><a href="1manga-home .html">漫画</a>
+   <li><a href="https://gyhentai.com/home">home</a></li>
+   <li><a href="https://gyhentai.com/1manga-home">漫画</a>
    </li>
-   <li><a href="2syosetu-home.html">小説</a>
+   <li><a href="https://gyhentai.com/2syosetu-home">小説</a>
    </li>
-   <li><a href="3irasuto-home.html">イラスト</a></li>
- <li><a href="4syouhin-home.html">商品</a>
+   <li><a href="https://gyhentai.com/3irasuto-home">イラスト</a></li>
+ <li><a href="https://gyhentai.com/4syouhin-home">商品</a>
    </li>
-   <li><a href="5osusume-home.html">おすすめ</a>
+   <li><a href="https://gyhentai.com/5osusume-home">おすすめ</a>
    </li>
-   <li><a href="6profile-home.html">プロフィール</a></li> 
+   <li><a href="https://gyhentai.com/6profile-home">プロフィール</a></li> 
    <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul> 
@@ -96,7 +96,7 @@ ul.navi-top li:hover ul {
 </head>
 <body>
   <header>
-    <li><a href="home.html"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
+    <li><a href="https://gyhentai.com/home"><h1 class="title">ゲ砂焼き鳥の無料エロ同人</h1></a></li>
 
     <nav class="nav">
 
