--- a/home.html
+++ b/home.html
@@ -122,9 +122,16 @@ header {
 
 </style>
 
-<form action="gyhentai.com" method="post">
-  <input type="search" name="search" placeholder="キーワードを入力">
-  <input type="submit" name="submit" value="検索">
+<form action="http://www.goo.ne.jp/default.asp">
+<input type=text name="MT" size=20>
+<input type=submit value="検索" name="act.search">
+<input type="hidden" name="SM" value="MC">
+<input type=hidden name="RD" value="DM">
+<input type=hidden name="Domain" value="www.tohoho-web.co">
+<input type=hidden name="Path" value="">
+<input type=hidden name="from" value="USR">
+<input type=hidden name="DC" value="50">
+(by <a href="http://www.goo.ne.jp">Goo</a>)
 </form>
 		
 	
