--- a/home.html
+++ b/home.html
@@ -122,18 +122,18 @@ header {
 
 </style>
 
-<form action="http://www.goo.ne.jp/default.asp">
+<form action="https://www.google.co.jp//default.asp">
 <input type=text name="MT" size=20>
 <input type=submit value="検索" name="act.search">
 <input type="hidden" name="SM" value="MC">
 <input type=hidden name="RD" value="DM">
-<input type=hidden name="Domain" value="www.tohoho-web.co">
+<input type=hidden name="Domain" value="gyhentai.com">
 <input type=hidden name="Path" value="">
 <input type=hidden name="from" value="USR">
 <input type=hidden name="DC" value="50">
-(by <a href="http://www.goo.ne.jp">Goo</a>)
-</form>
-		
+(by <a href="https://www.google.co.jp/">google</a>)
+</form>準備中
+	
 	
 <style>
 
