--- a/home.html
+++ b/home.html
@@ -122,17 +122,8 @@ header {
 
 </style>
 
-<form action="https://www.google.co.jp//default.asp">
-<input type=text name="MT" size=20>
-<input type=submit value="検索" name="act.search">
-<input type="hidden" name="SM" value="MC">
-<input type=hidden name="RD" value="DM">
-<input type=hidden name="Domain" value="gyhentai.com">
-<input type=hidden name="Path" value="">
-<input type=hidden name="from" value="USR">
-<input type=hidden name="DC" value="50">
-(by <a href="https://www.google.co.jp/">google</a>)
-</form>準備中
+<script async src="https://cse.google.com/cse.js?cx=1d0353bb49b97f457"></script>
+<div class="gcse-search"></div>
 	
 	
 <style>
