--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
 <ul class="navi-top">
    <li><a href="">home</a></li>
    <li><a href="">漫画</a></li>
-   <li><a href="">小説</a></li>
-   <li><a href="">イラスト</a></li>
+   <li><a href="2syosetu-home.html">小説</a></li>
+   <li><a href="3irasuto-home.html">イラスト</a></li>
    <li><a href="">商品</a></li>
    <li><a href="">おすすめ</a></li>   
 　　<li><a href="">プロフィール</a></li>  
@@ -23,9 +23,9 @@
    <li><a href="">home</a></li>
    <li><a href="">漫画</a>
    </li>
-   <li><a href="">小説</a>
+   <li><a href="2syosetu-home.html">小説</a>
    </li>
-   <li><a href="">イラスト</a></li>
+   <li><a href="3irasuto-home.html">イラスト</a></li>
  <li><a href="">商品</a>
    </li>
    <li><a href="">おすすめ</a>
