--- a/2syosetu-home.html
+++ b/2syosetu-home.html
@@ -136,8 +136,8 @@ header {
         <br><br><br><br><br><br><br>
 
 <b><p><font size="5">小説</font></p></b>
-<a href="fukusyu-no-oltudoaizu-home-s.html"><b><p><font size="5">復讐の異色眼兄妹～種付けして完全催眠～</font></p></b></a>
-<br><a href="/aaa/bbb/ccc.html"><b><p><font size="5">転生先の世界では</font></p></b></a>
+<a href=""><b><p><font size="5">復讐の異色眼兄妹～種付けして完全催眠～</font></p></b></a>
+<br><a href=""><b><p><font size="5">転生先の世界では</font></p></b></a>
 
 
 
