--- a/2syosetu-home.html
+++ b/2syosetu-home.html
@@ -13,7 +13,7 @@
    <li><a href="3irasuto-home.html.">イラスト</a></li>
    <li><a href="">商品</a></li>
    <li><a href="">おすすめ</a></li>   
-　　<li><a href="">プロフィール</a></li>  
+　　<li><a href="6profile-home.html">プロフィール</a></li>  
     <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul>
