--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <li><a href="3irasuto-home.html">イラスト</a></li>
    <li><a href="">商品</a></li>
    <li><a href="">おすすめ</a></li>   
-　　<li><a href="">プロフィール</a></li>  
+　　<li><a href="6profile-home.html">プロフィール</a></li>  
     <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul>
@@ -30,7 +30,7 @@
    </li>
    <li><a href="">おすすめ</a>
    </li>
-   <li><a href="">プロフィール</a></li> 
+   <li><a href="6profile-home.html">プロフィール</a></li> 
    <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 </ul> 
@@ -137,11 +137,11 @@ header {
 <br><br><br><br><br><br><br>
 
 <a href=""><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
-<a href=""><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
-<a href=""><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
+<a href="2syosetu-home.html"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
+<a href="3irasuto-home.html"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
 <a href=""><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
 <a href=""><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
-<a href=""><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
+<a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
 
 
