--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
-   <li><a href="">home</a></li>
-   <li><a href="">漫画</a></li>
+   <li><a href="home.html">home</a></li>
+   <li><a href="1manga-home .html">漫画</a></li>
    <li><a href="2syosetu-home.html">小説</a></li>
    <li><a href="3irasuto-home.html">イラスト</a></li>
-   <li><a href="">商品</a></li>
-   <li><a href="">おすすめ</a></li>   
+   <li><a href="4syouhin-home.html">商品</a></li>
+   <li><a href="5osusume-home.html">おすすめ</a></li>   
 　　<li><a href="6profile-home.html">プロフィール</a></li>  
     <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
@@ -20,15 +20,15 @@
 <!-- global navigation menu page top -->
 
 <ul class="navi-top">
-   <li><a href="">home</a></li>
-   <li><a href="">漫画</a>
+   <li><a href="home.html">home</a></li>
+   <li><a href="1manga-home .html">漫画</a>
    </li>
    <li><a href="2syosetu-home.html">小説</a>
    </li>
    <li><a href="3irasuto-home.html">イラスト</a></li>
- <li><a href="">商品</a>
+ <li><a href="4syouhin-home.html">商品</a>
    </li>
-   <li><a href="">おすすめ</a>
+   <li><a href="5osusume-home.html">おすすめ</a>
    </li>
    <li><a href="6profile-home.html">プロフィール</a></li> 
    <li><a href="https://twitter.com/gesunayakitori?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false">Follow @gesunayakitori</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -136,22 +136,29 @@ header {
     	<div class="main-contents">
 <br><br><br><br><br><br><br>
 
-<a href=""><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
+<a href="1manga-home .html"><img src="img/manga.jpg"width=: auto; height=100% alt="漫画"></a>
 <a href="2syosetu-home.html"><img src="img/syosetu.jpg"width=: auto; height=100% alt="小説"></a>
 <a href="3irasuto-home.html"><img src="img/irasuto.jpg"width=: auto; height=100% alt="イラスト"></a>
-<a href=""><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
-<a href=""><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
+<a href="4syouhin-home.html"><img src="img/syouhin.jpg"width=: auto; height=100% alt="商品"></a>
+<a href="5osusume-home.html"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
 <a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
 
 
+<br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
+<br><ins class="dmm-widget-placement" data-id="51512ab125da9923ad422ff9a7003391" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="51512ab125da9923ad422ff9a7003391"></script>
+<br><ins class="dmm-widget-placement" data-id="3e1bc332195b59993bbde1410e2daef7" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3e1bc332195b59993bbde1410e2daef7"></script>
 
 
-      </di      </div>
+
+      </div>
+    <div class="right-navi">
+<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script><br><ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script><br><br><ins class="dmm-widget-placement" data-id="039f5348a4a99a409f332cff5d159292" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="039f5348a4a99a409f332cff5d159292"></script><br><ins class="dmm-widget-placement" data-id="45033d5581a5d6ceb3dc3362d358c21c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="45033d5581a5d6ceb3dc3362d358c21c"></script>
+      </div>
 
     </div>
-    <div class="left-navi"
-
+    <div class="left-navi">
+<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="5a8617fbf1ddc1ac92df2029af846b90" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a8617fbf1ddc1ac92df2029af846b90"></script><br><ins class="dmm-widget-placement" data-id="0b09ef1b7ce23c3ca178c7b5e6565037" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0b09ef1b7ce23c3ca178c7b5e6565037"></script><br><ins class="dmm-widget-placement" data-id="72a850df7fe4d121dba7edc8434c1ad3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="72a850df7fe4d121dba7edc8434c1ad3"></script><br><ins class="dmm-widget-placement" data-id="6947219c0086ddad1cebc38095776d40" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6947219c0086ddad1cebc38095776d40"></script>
     </div>
 
 
