--- a/home.html
+++ b/home.html
@@ -145,7 +145,7 @@ header {
 <a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
 <br><ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
-
+<ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
 
 
       </div>
