--- a/home.html
+++ b/home.html
@@ -144,17 +144,12 @@ header {
 <a href="5osusume-home.html"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
 <a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
-	<ins class="dmm-widget-placement" data-id="9605c10b4b9b128b379eb0946e084925" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9605c10b4b9b128b379eb0946e084925"></script>	
-		
+<ins class="dmm-widget-placement" data-id="9605c10b4b9b128b379eb0946e084925" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9605c10b4b9b128b379eb0946e084925"></script>	
+<script type="text/javascript">blogparts={"id":"9333","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
       
 	   </div>
     <div class="right-navi">
-<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script><br><ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script><br><br><ins class="dmm-widget-placement" data-id="039f5348a4a99a409f332cff5d159292" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="039f5348a4a99a409f332cff5d159292"></script><br><ins class="dmm-widget-placement" data-id="45033d5581a5d6ceb3dc3362d358c21c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="45033d5581a5d6ceb3dc3362d358c21c"></script>
-      </div>
-
-    </div>
-    <div class="left-navi">
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script>
 <br>
@@ -235,6 +230,11 @@ header {
 <ins class="dmm-widget-placement" data-id="e46626485e7588dc15c6a79809be4553" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="e46626485e7588dc15c6a79809be4553"></script>
 <br>
 <ins class="dmm-widget-placement" data-id="ba871c30bbc9fb846d2cc1b14ca177bf" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="ba871c30bbc9fb846d2cc1b14ca177bf"></script>
+      </div>
+
+    </div>
+    <div class="left-navi">
+
 <br>
     </div>
 
