--- a/home.html
+++ b/home.html
@@ -144,13 +144,13 @@ header {
 <a href="5osusume-home.html"><img src="img/osusume.jpg"width=: auto; height=100% alt="おすすめ"></a>
 <a href="6profile-home.html"><img src="img/profile.jpg"width=: auto; height=100% alt="プロフィール"></a>
 
-<ins class="dmm-widget-placement" data-id="9605c10b4b9b128b379eb0946e084925" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="9605c10b4b9b128b379eb0946e084925"></script>	
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>
+<ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
 <script type="text/javascript">blogparts={"id":"9333","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
       
 	   </div>
     <div class="right-navi">
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script>
 <br>
 <ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script>
@@ -234,7 +234,7 @@ header {
 
     </div>
     <div class="left-navi">
-
+<br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="5a8617fbf1ddc1ac92df2029af846b90" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="5a8617fbf1ddc1ac92df2029af846b90"></script><br><ins class="dmm-widget-placement" data-id="0b09ef1b7ce23c3ca178c7b5e6565037" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0b09ef1b7ce23c3ca178c7b5e6565037"></script><br><ins class="dmm-widget-placement" data-id="72a850df7fe4d121dba7edc8434c1ad3" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="72a850df7fe4d121dba7edc8434c1ad3"></script><br><ins class="dmm-widget-placement" data-id="6947219c0086ddad1cebc38095776d40" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6947219c0086ddad1cebc38095776d40"></script>
 <br>
     </div>
 
