--- a/dlsite-doujin.htm
+++ b/dlsite-doujin.htm
@@ -143,6 +143,8 @@ header {
 <br><a href="dlsite-doujin-5.html"><b><p><font size="5">キャラクター/衣装</font></p></b></a>
 <br><a href="dlsite-doujin-6.html"><b><p><font size="5">外見/身体的特徴</font></p></b></a>
 <br><a href="dlsite-doujin-7.html"><b><p><font size="5">残酷系/異常系</font></p></b></a>
+<br>
+<script type="text/javascript">blogparts={"id":"9119","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
       </div>
     <div class="right-navi">
