--- a/fannza-osusume-home.html
+++ b/fannza-osusume-home.html
@@ -147,13 +147,16 @@ header {
 
 
 
-<br><ins class="dmm-widget-placement" data-id="6cbef7d6231c7a26b128547456d25f3a" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6cbef7d6231c7a26b128547456d25f3a"></script>
-<br><ins class="dmm-widget-placement" data-id="51512ab125da9923ad422ff9a7003391" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="51512ab125da9923ad422ff9a7003391"></script>
-<br><ins class="dmm-widget-placement" data-id="3e1bc332195b59993bbde1410e2daef7" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="3e1bc332195b59993bbde1410e2daef7"></script>
-
-
-
-      </div>
+<br>
+<ins class="dmm-widget-placement" data-id="6283c11b8c45990f98e15a54f1821fd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="6283c11b8c45990f98e15a54f1821fd5"></script>
+<br>
+<ins class="dmm-widget-placement" data-id="7eeca661d333bb5d0be5edc8bce00dd5" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="7eeca661d333bb5d0be5edc8bce00dd5"></script>	
+<br>
+<ins class="dmm-widget-placement" data-id="cb2f95c944e3090d0ca5c58ea6ffe12b" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="cb2f95c944e3090d0ca5c58ea6ffe12b"></script>
+<br>
+<ins class="dmm-widget-placement" data-id="44c6ac7dfecad420f6bfdca318b3b247" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="44c6ac7dfecad420f6bfdca318b3b247"></script>
+      
+	   </div>
     <div class="right-navi">
 <br><br><br><br><br><br><br><ins class="dmm-widget-placement" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="0dbcce87ce4ba1f9cf3e4825f19dfca2"></script><br><ins class="dmm-widget-placement" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="bb7f1c75c3bd7f4992fdffbbd49bf9fc"></script><br><br><ins class="dmm-widget-placement" data-id="039f5348a4a99a409f332cff5d159292" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="039f5348a4a99a409f332cff5d159292"></script><br><ins class="dmm-widget-placement" data-id="45033d5581a5d6ceb3dc3362d358c21c" style="background:transparent"></ins><script src="https://widget-view.dmm.co.jp/js/placement.js" class="dmm-widget-scripts" data-id="45033d5581a5d6ceb3dc3362d358c21c"></script>
       </div>
