--- a/dlsite-doujin-1.html
+++ b/dlsite-doujin-1.html
@@ -136,7 +136,7 @@ header {
     	<div class="main-contents">
         <br><br><br><br><br><br><br><b><p><font size="5">DLsiteのおすすめ同人</font></p></b><br><br><br>
 
-<b><p><font size="7">こだわり/アピール</font></p></b>
+<b><p><font size="7">こだわり/アピール1</font></p></b>
 
 <br><b><p><font size="5">3D作品</font></p></b><br>
 <script type="text/javascript">blogparts={"id":"9329","ssl":"0"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
@@ -213,82 +213,10 @@ header {
 <script type="text/javascript">blogparts={"id":"9377","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 <script type="text/javascript">blogparts={"id":"9378","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
 
-<br><b><p><font size="5">逆転無し</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9379","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9380","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
+<br><br>
+<a href="dlsite-doujin-1-2.html"><b><p><font size="5">＞</font></p></b></a>
 
-<br><b><p><font size="5">催眠音声</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9381","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9382","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">女性視点</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9383","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9384","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">シリーズもの</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9385","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9386","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">汁/液大量</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9387","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9388","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">総集編</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9389","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9390","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">淡白/あっさり</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9391","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9392","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">断面図</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9393","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9394","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">着衣</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9395","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9396","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">チラリズム</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9397","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9398","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">ツクール</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9399","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9400","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">東方Project</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9401","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9402","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">バイノーラル/ダミヘ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9403","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9404","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">評論</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9405","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9406","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">フェチ</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9407","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9408","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">マニアック/変態</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9409","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9410","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">萌え</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9411","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9412","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">燃え</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9413","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9414","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
-<br><b><p><font size="5">連続絶頂</font></p></b><br>
-<script type="text/javascript">blogparts={"id":"9415","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-<script type="text/javascript">blogparts={"id":"9417","ssl":"1"}</script><script type="text/javascript" src="https://www.dlsite.com/js/blogparts.js" charset="UTF-8"></script>
-
+<br>
       </div>
     <div class="right-navi">
 
